# ec2-ib-touch-turn-scalper

./: .gitignore  README.md  pyproject.toml  requirements.txt  trader1.pem
.github/: copilot-instructions.md
src/trading_bot/: __init__.py  config.py  depth_confirm.py  execution.py  ib_client.py  main.py  strategy.py  utils.py
tests/: test_utils.py
