[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ec2-ib-touch-turn-scalper"
version = "0.1.0"
description = "EC2-hosted Interactive Brokers scalping bot using opening range and level 2 confirmation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "boto3>=1.30.0",
    "python-dateutil>=2.8.0"
]

[project.scripts]
start = "trading_bot.main:main"
